# gaps

./: .buildinfo  .coveragerc  .gitignore  .pylintrc  Apptainer  INSTALL.rst  MANIFEST.in  README.rst  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yaml  config.yml  documentation_improvement.yaml  feature_request.md  feature_request.yaml  installation_issue.yaml
.github/workflows/: apptainer-build-deploy.yml  codecov.yml  docs.yml  gh_pages.yml  linter.yml  merge_codecov.yml  pixi_tests.yml  pr_rev_cli_tests.yml  publish_to_pypi.yml  pull_request_cov.yml  pull_request_tests.yml  pull_request_tests_specific_versions.yml  release_drafter.yml  super_linter.yml  tests_tox.yml  wildows_pytests.yml
_autosummary/: gaps.batch.BatchJob.html  gaps.batch.BatchSet.html  gaps.batch.html  gaps.cli.batch.batch_command.html  gaps.cli.batch.html  gaps.cli.cli.as_click_command.html  gaps.cli.cli.html  gaps.cli.cli.make_cli.html  gaps.cli.collect.collect.html  gaps.cli.collect.html  gaps.cli.command.AbstractBaseCLICommandConfiguration.html  gaps.cli.command.CLICommandConfiguration.html  gaps.cli.command.CLICommandFromClass.html  gaps.cli.command.CLICommandFromFunction.html  gaps.cli.command.html  gaps.cli.config.as_script_str.html  gaps.cli.config.from_config.html  gaps.cli.config.html  gaps.cli.config.node_kwargs.html  gaps.cli.config.run_with_status_updates.html  gaps.cli.documentation.CommandDocumentation.html  gaps.cli.documentation.html  gaps.cli.execution.html  gaps.cli.execution.kickoff_job.html  gaps.cli.html  gaps.cli.pipeline.html  gaps.cli.pipeline.pipeline.html  gaps.cli.pipeline.pipeline_command.html  gaps.cli.pipeline.template_pipeline_config.html  gaps.cli.preprocessing.html  gaps.cli.preprocessing.preprocess_collect_config.html  gaps.cli.preprocessing.preprocess_script_config.html  gaps.cli.preprocessing.split_project_points_into_ranges.html  gaps.cli.reset.html  gaps.cli.reset.reset_command.html  gaps.cli.script.html  gaps.cli.script.script.html  gaps.cli.status.html  gaps.cli.status.main_monitor.html  gaps.cli.status.status_command.html  (+91 more)
_modules/: index.html
_modules/gaps/: batch.html  collection.html  config.html  exceptions.html  hpc.html  legacy.html  log.html  pipeline.html  project_points.html  status.html  utilities.html  warn.html  warnings.html
_modules/gaps/cli/: batch.html  cli.html  collect.html  command.html  config.html  documentation.html  execution.html  pipeline.html  preprocessing.html  reset.html  script.html  status.html  templates.html
_sources/: index.rst.txt
_sources/_autosummary/: gaps.batch.BatchJob.rst.txt  gaps.batch.BatchSet.rst.txt  gaps.batch.rst.txt  gaps.cli.batch.batch_command.rst.txt  gaps.cli.batch.rst.txt  gaps.cli.cli.as_click_command.rst.txt  gaps.cli.cli.make_cli.rst.txt  gaps.cli.cli.rst.txt  gaps.cli.collect.collect.rst.txt  gaps.cli.collect.rst.txt  gaps.cli.command.AbstractBaseCLICommandConfiguration.rst.txt  gaps.cli.command.CLICommandConfiguration.rst.txt  gaps.cli.command.CLICommandFromClass.rst.txt  gaps.cli.command.CLICommandFromFunction.rst.txt  gaps.cli.command.rst.txt  gaps.cli.config.as_script_str.rst.txt  gaps.cli.config.from_config.rst.txt  gaps.cli.config.node_kwargs.rst.txt  gaps.cli.config.rst.txt  gaps.cli.config.run_with_status_updates.rst.txt  gaps.cli.documentation.CommandDocumentation.rst.txt  gaps.cli.documentation.rst.txt  gaps.cli.execution.kickoff_job.rst.txt  gaps.cli.execution.rst.txt  gaps.cli.pipeline.pipeline.rst.txt  gaps.cli.pipeline.pipeline_command.rst.txt  gaps.cli.pipeline.rst.txt  gaps.cli.pipeline.template_pipeline_config.rst.txt  gaps.cli.preprocessing.preprocess_collect_config.rst.txt  gaps.cli.preprocessing.preprocess_script_config.rst.txt  gaps.cli.preprocessing.rst.txt  gaps.cli.preprocessing.split_project_points_into_ranges.rst.txt  gaps.cli.reset.reset_command.rst.txt  gaps.cli.reset.rst.txt  gaps.cli.rst.txt  gaps.cli.script.rst.txt  gaps.cli.script.script.rst.txt  gaps.cli.status.main_monitor.rst.txt  gaps.cli.status.rst.txt  gaps.cli.status.status_command.rst.txt  (+91 more)
_sources/dev/: README.rst.txt  index.rst.txt
_sources/misc/: examples.developers.rst.txt  examples.users.rst.txt
dev/: README.html  index.html
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/dev/: README.rst
docs/source/misc/: examples.rst  installation.rst
examples/: cli.py  example_developers.rst  example_users.rst  model.py
gaps/: __init__.py  _cli.py  batch.py  collection.py  config.py  exceptions.py  hpc.py  legacy.py  log.py  pipeline.py  project_points.py  status.py  utilities.py  version.py  warnings.py
gaps/cli/: __init__.py  batch.py  cli.py  collect.py  command.py  config.py  documentation.py  execution.py  pipeline.py  preprocessing.py  reset.py  script.py  status.py  templates.py
misc/: examples.developers.html  examples.html  examples.users.html  installation.html  installation_usage.html
tests/: conftest.py  test_batch.py  test_collection.py  test_config.py  test_exceptions.py  test_hpc.py  test_legacy.py  test_log.py  test_pipeline.py  test_project_points.py  test_status.py  test_utilities.py  test_warn.py  test_warnings.py
tests/cli/: test_cli.py  test_cli_batch.py  test_cli_collect.py  test_cli_command.py  test_cli_config.py  test_cli_documentation.py  test_cli_execution.py  test_cli_pipeline.py  test_cli_preprocesing.py  test_cli_reset.py  test_cli_script.py  test_cli_status.py  test_cli_templates.py
tests/data/batch_project_1/: config_batch.csv
tests/data/batch_project_2/: config_batch.json
tests/data/hpc/: qstat.txt  squeue.txt
tests/data/test_failed_run/: jobstatus_gaps_test_failed_run_node1.json  jobstatus_gaps_test_failed_run_node2.json
tests/data/test_failed_run/.gaps/: test_failed_run_status.json  (+1 more)
tests/data/test_run/: jobstatus_gaps_test_run_node0.json  jobstatus_gaps_test_run_node1.json  jobstatus_gaps_test_run_node2.json
(+1 files in other folders)
